--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -4,9 +4,7 @@ AE2WTLib
 AEInfinityBooster
 Applied Energistics 2
 Archer's Paradox
-Biomes O' Plenty
 CoFH Core
-Creeper Overhaul
 Delightful
 EnderStorage
 Ensorcellation
@@ -57,3 +55,16 @@ Glassential
 Iron Jetpacks
 RFToolsBuilder
 RFToolsUtility
+AE2 Tools Complement
+Aquaculture 2
+Dungeons Plus
+Oh The Biomes You'll Go
+Structure Gel API
+Boatload
+Farming for Blockheads
+Homespun
+Progressive Bosses
+Shrink
+Wither Skeleton Tweaks
+FTB Quests
+Item Filters
