--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -76,7 +76,11 @@ thermal:smelter
 thermal:smelter_catalyst
 thermal:stirling_fuel
 thermal:tree_extractor
-vtweaks:fluid_conversion
 hostilenetworks:loot_fabricator
 hostilenetworks:sim_chamber
 sullysmod:grindstone_polishing
+farmingforblockheads:market
+homespun:evaporating
+homespun:tub_crushing
+ftbquests:loot_crate
+ftbquests:quest
