--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -1436,7 +1436,7 @@
 
 [client]
 	"Wool Shuts Up Minecarts" = true
-	"Variant Animal Textures" = true
+	"Variant Animal Textures" = false
 	"Uses For Curses" = true
 	"Usage Ticker" = true
 	"Soul Candles" = true
@@ -1479,7 +1479,7 @@
 		"Enable Armor" = true
 
 	[client.improved_tooltips]
-		"Attribute Tooltips" = true
+		"Attribute Tooltips" = false
 		"Food Tooltips" = false
 		"Shulker Tooltips" = true
 		"Map Tooltips" = true
