--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -71,3 +71,11 @@ Buzzier Bees
 Macaw's Bridges
 Macaw's Bridges - BYG
 Species
+Ad Astra
+Ad Astra!: Giselle Addon
+Applied Botanics
+Botania
+Botanical Complement
+Dave's Potioneering
+MythicBotany
+Thermal Endergy
