--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -83,3 +83,21 @@ homespun:evaporating
 homespun:tub_crushing
 ftbquests:loot_crate
 ftbquests:quest
+ad_astra:compressing
+ad_astra:cryo_fuel_conversion
+ad_astra:fuel_conversion
+ad_astra:nasa_workbench
+ad_astra:oxygen_conversion
+ad_astra_giselle_addon:fuel_loader
+botania:brewery
+botania:elven_trade
+botania:mana_pool
+botania:marimorphosis
+botania:orechid
+botania:orechid_ignem
+botania:petals
+botania:pure_daisy
+botania:runic_altar
+botania:terra_plate
+mythicbotany:infuser
+mythicbotany:rune_ritual
