--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,5 +1,6 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Thu May 18 11:24:39 CEST 2023
+#Sun Jul 09 14:02:40 CEST 2023
+colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
 maxShadowRenderDistance=32
