--- a/config/modernfix-mixins.properties
+++ b/config/modernfix-mixins.properties
@@ -5,7 +5,8 @@
 #  mixin.bugfix
 #  mixin.bugfix.chunk_deadlock
 #  mixin.bugfix.concurrency
-#  mixin.bugfix.edge_chunk_not_saved
+#  mixin.bugfix.ctm_resourceutil_cme
+#  mixin.bugfix.fix_config_crashes
 #  mixin.bugfix.packet_leak
 #  mixin.bugfix.paper_chunk_patches
 #  mixin.devenv
@@ -14,6 +15,10 @@
 #  mixin.feature.direct_stack_trace
 #  mixin.feature.integrated_server_watchdog
 #  mixin.feature.measure_time
+#  mixin.feature.snapshot_easter_egg
+#  mixin.feature.spam_thread_dump
+#  mixin.feature.spark_profile_launch
+#  mixin.feature.warn_missing_perf_mods
 #  mixin.launch.class_search_cache
 #  mixin.perf
 #  mixin.perf.blast_search_trees
@@ -26,17 +31,20 @@
 #  mixin.perf.compress_blockstate
 #  mixin.perf.datapack_reload_exceptions
 #  mixin.perf.dedicated_reload_executor
+#  mixin.perf.deduplicate_climate_parameters
 #  mixin.perf.deduplicate_location
 #  mixin.perf.dynamic_dfu
 #  mixin.perf.dynamic_entity_renderers
 #  mixin.perf.dynamic_resources
 #  mixin.perf.dynamic_resources.ae2
 #  mixin.perf.dynamic_resources.ctm
+#  mixin.perf.dynamic_resources.diagonalfences
 #  mixin.perf.dynamic_resources.rs
 #  mixin.perf.dynamic_resources.supermartijncore
 #  mixin.perf.dynamic_structure_manager
 #  mixin.perf.fast_forge_dummies
 #  mixin.perf.fast_registry_validation
+#  mixin.perf.faster_advancements
 #  mixin.perf.faster_font_loading
 #  mixin.perf.faster_item_rendering
 #  mixin.perf.faster_texture_loading
@@ -55,3 +63,4 @@
 #  mixin.perf.tag_id_caching
 #  mixin.perf.thread_priorities
 #  mixin.safety
+mixin.perf.dynamic_resources=true
